# hex-c

./: CMakeLists.txt  LICENSE  README.md
include/hex-c/: hex.h
src/: hex.c
